--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -421,6 +421,9 @@ case "$target" in
             _CC_SUITE=10
             MSVC_C_RUNTIME_DLL=msvcr100.dll
             MSVC_CXX_RUNTIME_DLL=msvcp100.dll
+            # C4355: 'this' : used in base member initializer list
+            CFLAGS="$CFLAGS -wd4355"
+            CXXFLAGS="$CXXFLAGS -wd4355"
         elif test "$_CC_MAJOR_VERSION" = "18"; then
             _CC_SUITE=12
             MSVC_C_RUNTIME_DLL=msvcr120.dll
@@ -1772,10 +1775,12 @@ ia64*-hpux*)
         _DEFINES_CXXFLAGS='-FI $(DEPTH)/js/src/js-confdefs.h -DMOZILLA_CLIENT'
         CFLAGS="$CFLAGS -W3 -Gy"
         CXXFLAGS="$CXXFLAGS -W3 -Gy"
+        if test "$_CC_SUITE" -ge "11"; then
         if test "$CPU_ARCH" = "x86"; then
             dnl VS2012+ defaults to -arch:SSE2.
             CFLAGS="$CFLAGS -arch:IA32"
             CXXFLAGS="$CXXFLAGS -arch:IA32"
+        fi
         fi
         if test "$_CC_SUITE" -ge "12"; then
         dnl VS2013+ requires -FS when parallel building by make -jN.
